--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,22 +19,23 @@
     "@mui/icons-material": "^6.2.3",
     "@mui/material": "^6.2.3",
     "@tanstack/react-query": "^5.90.6",
+    "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "jotai": "^2.14.0",
     "jotai-devtools": "^0.10.1",
     "lodash-es": "^4.17.21",
     "react": "^19",
     "react-dom": "^19",
+    "react-player": "2.16.0",
     "react-router-dom": "^7.8.2",
-    "video.js": "^8.16.0",
     "y-excalidraw": "^2.0.12",
+    "yjs": "^13.6.10",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/video.js": "^7.3.58",
     "@vanilla-extract/css": "^1.16.1",
     "@vanilla-extract/vite-plugin": "^4.0.20",
     "@vitejs/plugin-react": "^4.3.4",
