--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "backend:dev": "pnpm --filter backend dev",
     "web:dev": "pnpm --filter web dev",
     "test:e2e": "pnpm --filter playwright test",
+    "test:e2e:ui": "pnpm --filter playwright test:ui",
+    "test:e2e:debug": "pnpm --filter playwright test:debug",
+    "test:e2e:update-snapshots": "pnpm --filter playwright test:update-snapshots",
     "build": "sst build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
